feat: colour-coded advancement embeds (+ config-upgrade NPE fix)
Found and fixed during Gate 2 testing, plus the requested embed styling.

fix: threadAutoArchiveMinutes used defineInList with an immutable
List.of(...) for its allowed values. NeoForge tests the (absent -> null)
current value during config correction, and List.of(...).contains(null)
throws NPE — freezing world load on the v0.1.0 -> v0.2.0 upgrade (an
existing config is missing the new key). Switched to null-tolerant
Arrays.asList(...). This would have hit every existing server, DT included.

feat: advancement messages now render as a colour-coded Discord embed
(title + full description) with the bar matching the in-game frame colour
(green for task/goal, purple for challenge) via
DisplayInfo.getType().getChatColor(). Added DiscordThreadClient.postEmbed;
advancementMessageTemplate default is now the attribution line "{player}
earned" since the title/description live in the embed.

Bump mod_version 0.1.1 -> 0.2.0 (Gate 3 MINOR).

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>